p14520 Attach message files from process parameters.